--- a/index.html
+++ b/index.html
@@ -72,12 +72,17 @@
       </section>
       <section class="section" id="chefs-section">
         <div class="container">
-          <h2 class="chefs-title section-title">
+          <h2 class="chefs-title section-title centered">
             Наші найкращі <span class="accent">шеф-кухарі</span>
           </h2>
           <ul>
             <li>
               <article>
+                <img
+                  class="chef-photo"
+                  src="./images/nastya-chef.jpg"
+                  alt="Nastya chef"
+                />
                 <h3 class="chef-title">Настя</h3>
                 <p>Привіт, я Настя!</p>
 
@@ -88,6 +93,11 @@
             </li>
             <li>
               <article>
+                <img
+                  class="chef-photo"
+                  src="./images/vlad-chef.jpg"
+                  alt="Vlad chef"
+                />
                 <h3 class="chef-title">Влад</h3>
                 <p>Привіт, я Влад!</p>
                 <p>
@@ -102,7 +112,7 @@
       </section>
       <section class="section" id="formats-section">
         <div class="container">
-          <h2 class="formats-title section-title">Формати</h2>
+          <h2 class="formats-title section-title centered">Формати</h2>
           <ul class="formats-list">
             <li class="formats-item">
               <article class="format-card">
@@ -143,7 +153,7 @@
       </section>
       <section class="section" id="contact-section">
         <div class="container">
-          <h2 class="contact-title section-title">
+          <h2 class="contact-title section-title centered">
             Приєднуйтесь до мережі пекарень
           </h2>
           <p>Заповни форму, щоб ми звʼязались з тобою!</p>
@@ -159,7 +169,7 @@
         </div>
       </section>
     </main>
-    <footer>
+    <footer class="footer">
       <div class="container">
         <nav>
           <a href="#">
